--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,8 @@
 [pytest]
-log_file = test/pytest.log
+log_file = test/log_result/pytest.log
 log_file_level = DEBUG
 log_file_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
 log_file_date_format = %Y-%m-%d %H:%M:%S
+
+env = 
+    TEST_ENDPOINT=http://192.168.1.104:8000
